css/modals.css
button:focus {
    outline: none;
}

button {
    cursor: pointer;
}

.verification {
    width: 400px !important;
    text-align: center;
    font-size: 18px;
}

.verification .warning {
    margin-bottom: 5px;
    color: black;
}

.verification .message_warning.warning {
    margin-bottom: 30px;
}

.verification .target {
    color: grey;
    margin-bottom: 25px;
}

.verification .confirmation_btns {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.verification .confirmation_btns button {
    border-radius: 5px;
    padding: 10px 15px;
    margin: 0 10px;
    max-width: 220px;
}

.verification .confirmation_btns .continue {
    opacity: 0.7;
    background: red;
}

.verification .confirmation_btns .cancel {
    opacity: 0.7;
    background: green;
}

.verification .config_input {
    margin-bottom: 15px;
}

.verification .container {
    text-align: left;
}

.modal {
    display: none;
    position: fixed;
    z-index: 2;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0, 0, 0);
    background-color: rgba(0, 0, 0, 0.4);
}

.modal_content {
    position: relative;
    width: 530px;
    margin: auto;
    padding: 40px 60px;
    font-size: 14px;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    background-color: white;
    margin-top: 100px;
    margin-bottom: 50px;
}

.modal_content .close_btn {
    position: absolute;
    top: 15px;
    right: 15px;
    height: 17px !important;
    width: 17px !important;
    background-image: url(/gamecourse/images/close_icon.svg);
    border: none;
    background-color: white;
}

.modal_content .title {
    font-size: 20px;
    font-weight: bold;
    width: 100%;
    margin-bottom: 30px;
}

.modal_content .header {
    display: flex;
    align-items: center;
    margin-bottom: 20px;
}

.modal_content .header .icon {
    height: 50px;
    width: 50px;
    margin-right: 5px;
}

.modal_content .header .title {
    width: auto;
    margin-bottom: 0;
    margin-right: 30px;
    font-size: 25px;
    color: #484848;
}

.modal_content .content {
    width: 100%;
    position: relative;
    margin-bottom: 0;
    padding-bottom: 3px;
}

.modal_content .content .inputs {
    display: flex;
    flex-direction: column;
}

.modal_content .content .inputs .row_inputs,  
.modal_content .content .inputs .row_inputs .container{
    display: block;
    width: 100%;
    position: relative;
}

.modal_content .content .inputs .row {
    display: flex;
    margin-top: 10px;
}

.modal_content .content .inputs .image {
    margin-bottom: 22px;
}

.modal_content .content .inputs .image input[type="file"] {
    height: 234px;
    opacity: 0;
    cursor: pointer;
    position: absolute;
    top: 0;
    left: 0;
    width: calc(35% - 11px) !important;
}

.modal_content .content .inputs .image .profile_image {
    height: 230px;
    background-color: lightgrey;
    margin-bottom: 10px;
    border-radius: 5px;
    border: 2px dashed gray;
    display: flex;
    opacity: 0.6;
    position: relative;
}

.modal_content .content .inputs .image:hover .profile_image {
    opacity: 1;
}

.modal_content .content .inputs .image .profile_image span {
    margin: auto;
    padding: 10px;
    text-align: center;
}

.modal_content .content .inputs .image .profile_image #display_profile_image,
.modal_content .content .inputs .image .profile_image #edit_display_profile_image {
    position: absolute;
    width: 100%;
    height: 100%;
    max-width: 100%;
    max-height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.modal_content .content .inputs .image .profile_image #display_profile_image img,
.modal_content .content .inputs .image .profile_image #edit_display_profile_image img {
    max-width: inherit;
    max-height: inherit;
}

.modal_content .content .inputs .image input {
    width: 100%;
    padding: 0;
    font-size: 12px;
}

.modal_content .content .inputs .image input:focus {
    outline: none;
}

.modal_content .content .inputs .full {
    width: calc(100%);
    position: relative;
}

.modal_content .content .inputs .half {
    width: calc(47%);
    position: relative;
}

.modal_content .content .inputs .btn,
#aspect .btn {
    display: flex;
    align-items: center;
    padding: 2px 10px;
    background-color: #484848;
    opacity: 0.7;
    margin-bottom: 22px;
}

.modal_content .content .inputs .btn:disabled {
    opacity: 0.3;
    cursor: not-allowed;
}

.modal_content .content .inputs .bigger {
    width: calc(65% - 22px);
}

.modal_content .content .inputs .smaller {
    width: calc(35% - 11px);
}

.modal_content .content .inputs .skills,
.modal_content .content .inputs .roles_aspect {
    width: calc(25%);
    margin-right: 5px;
}

.modal_content .content .inputs .right {
    float: right;
    position: absolute;
    top: 0;
    right: 0;
}

.modal_content .content .form__label {
    font-family: 'Roboto', sans-serif;
    font-size: 14px;
    margin: 2px 0 10px 10px;
    display: block;
    transition: all 0.3s;
    transform: translateX(0px);
    -webkit-transform: translateX(0px);
    color: lightgray;
    position: absolute;
    top: 10px;
    right: 15px;
}

#add-user .modal_content .form__input,
#new-user .modal_content .form__input,
#edit-user .modal_content .form__input,
#add_part .modal_content .form__input,
#save_as_template .modal_content .form__input,
#edit-info .modal_content .form__input {
    margin-bottom: 22px;
}


/*New Role version of the modal*/

.little_modal {
    width: 410px;
}

.little_modal .form__input {
    margin-bottom: 50px !important;
}

#courses_list {
    margin-bottom: 15px;
    margin-top: -5px;
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

#roles {
    width: 40%;
    margin-right: 10px;
    height: 35px;
    margin-bottom: 0px !important;
    padding: 0;
}

#add_roles {
    align-items: center;
    display: flex;
    margin-bottom: 10px;
}

.modal_content .form__input {
    font-family: 'Roboto', sans-serif;
    color: #333;
    font-size: 14px;
    padding: 10px;
    background-color: white;
    display: inline-block;
    transition: all 0.3s;
    border-radius: 5px;
    width: 100%;
    margin-bottom: 22px;
    border: 2px solid lightgray;
}

.modal_content select.form__input {
    padding: 9px 10px;
}

.modal_content select#authService option {
    color: #333;
}

#add-user .modal_content select#authService,
#new-user .modal_content select#authService,
#open-item .modal_content select,
#aspects_modal .modal_content select#user,
#aspects_modal .modal_content select#viewer,
#aspects_modal .modal_content select#aspect_selection {
    color: rgb(106, 106, 106);
}

.modal_content .form__input:placeholder-shown+.form__label {
    opacity: 0;
    visibility: hidden;
    -webkit-transform: translateX(-70px);
    transform: translateX(-70px);
}

.modal_content .content .inputs .color_picker #color-sample,
#edit-color-sample {
    height: 20px;
    width: 20px;
    position: absolute;
    top: 10px;
    right: 15px;
}

.modal_content .content .inputs .color_picker .form__label {
    transform: translateX(-30px);
    -webkit-transform: translateX(-30px);
}

.modal_content .options {
    display: flex;
    justify-content: space-evenly;
}

.modal_content .options .option {
    width: 200px;
    border: 2px solid lightgray;
    border-radius: 5px;
    height: 150px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.modal_content .options .option .icon {
    height: 100px;
    width: 100px;
    margin-top: 20px;
    /*the rest is gotten from icon on general*/
}

.modal_content .icon {
    height: 30px;
    width: 30px;
}

.modal_content .delete_icon {
    height: 25px;
    width: 25px;
    opacity: 0.8;
    margin-left: 10px;
    background-color: white;
}

.modal_content .delete_icon:disabled {
    cursor: not-allowed;
    opacity: 0.3;
}

.modal_content .skill_tag {
    margin-top: 0px;
}

.modal_content .options .option #choose_create_new_user {
    background-image: url(/gamecourse/images/add_user_icon.svg);
}

.modal_content .options .option #choose_select_user {
    background-image: url(/gamecourse/images/select_user_icon.svg);
}

.modal_content .options .option .description {
    text-align: center;
    margin: 10px;
}

.modal_content .role_tag:hover,
.modal_content .user_tag:hover {
    background-image: url(/gamecourse/images/delete_icon.svg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: 16px;
    cursor: pointer;
}

.modal_content .content .search_box {
    display: flex;
    flex-wrap: wrap;
    padding: 6px 8px;
    font-size: 14px;
    border: 2px solid lightgrey;
    border-radius: 5px;
    margin-bottom: 10px;
}

.modal_content .content .search_box .user_tag {
    margin: 2px 5px 2px 0;
}

.modal_content .content .search_box #select_system_user {
    border: none;
    flex-grow: 1;
}

.modal_content .content .select_box {
    border: 2px solid lightgray;
    border-radius: 5px;
    margin-bottom: 20px;
    padding: 0;
    max-height: 220px;
    overflow: auto;
    min-height: 120px;
    font-size: 14px;
}

.modal_content .content .select_box .line {
    position: relative;
    height: 35px;
    border-bottom: 1px solid lightgrey;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 5px 0 10px;
}

.modal_content .content .select_box .line:hover {
    background-color: #f5f5f5;
}

.modal_content .content .select_box .line .add_icon_no_outline {
    background-image: url(/gamecourse/images/add_icon_no_outline.svg);
    height: 20px;
    width: 20px;
    margin-right: 5px;
    opacity: 0.8;
}

.modal_content .save_btn {
    position: absolute;
    bottom: 0px;
    right: 0;
}

#open-tier .modal_content .cancel,
#open-item .modal_content .cancel,
#new-view .modal_content .cancel,
#edit-view .modal_content .cancel,
#edit-row .modal_content .cancel,
#edit-course .modal_content .cancel,
#add-row .modal_content .cancel{
    position: absolute;
    bottom: 0px;
    right: 80;
    background-color: tomato;
}

.export.modal_content .cancel{
    position: absolute;
    bottom: 0px;
    right: 100;
    background-color: tomato;
}

#open-item .modal_content .preview {
    position: absolute;
    bottom: 0px;
    left: 0;
}

.modal_content .config_btn {
    position: absolute;
    bottom: 0px;
    right: 80px;
}

.on_off {
    display: flex;
    align-items: center;
    margin-right: 40px;
}

.on_off span {
    padding-right: 10px;
    line-height: 26px;
}

#dep_row, #edit_roles_selection {
    align-items: center;
    display: flex;
    margin-bottom: 10px;
}

#dep_list {
    margin-bottom: 12px;
}

#add_dep, #add_asp {
    display: flex;
    align-items: center;
    margin-bottom: 15px;
}

#dependency span,
#aspect span {
    color:white;
    padding:5px;
    font-weight:600;
}

#dependency1,
#dependency2, #user, #viewer {
    margin-bottom: 0px;
}

#editor {
    height: 150px;
    margin-bottom: 30px;
  }

  .ql-formats button {
      color: #444;
  }

  #aspects_modal .modal_content .roles_aspect {
    width: calc(33%);
    position: relative;
    margin-bottom: 0;
    margin-right: 5px;
}

